rtspclientsink: port-range property is not used for RTCP port-range selection
As per the current upstream state of the rtspclientsink element, it appears that the port-range property has both getter and setter functionality on the element. However, the actual value of the property is not being used when getting the client port(s) for rtspclientsink. Instead, the ephemeral port range is used for all client port selection, regardless of the value of the port-range property.
Is port-range intended to have no effect on the selected RTCP client ports for rtspclientsink? Or is this an oversight?